name:                LParse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MarcusVoelker/LParse#readme
license:             MIT
license-file:        LICENSE
author:              Marcus Völker
maintainer:          marcus.voelker@rwth-aachen.de
copyright:           (c) 2017 Marcus Völker
category:            Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Continuations Text.LParse.Atomics, Text.LParse.Parser, Text.LParse.Transformers
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MarcusVoelker/LParse
